# test

./: .gitignore  main.py  pyproject.toml  remote.py  requirements.txt  test1.py  test2.py
.github/workflows/: ci.yml
FastAPI_test/: test1.py
celery_test/: main.py  other_tasks.py  tasks.py
src/: main.py
src/templates/: login.html
templates/: home.html  register.html
test/: celery_app.py  celerybeat-schedule.dir  do.py
test2/: main.py  models.py  test.db
tests/: test_main.py
